пытаюсь сделать поисковую строку

--- a/inst.html
+++ b/inst.html
@@ -7,6 +7,7 @@
 		National Geographic Travel (@natgeotravel) &#8226 Instagram photos and videos
 	</title>
 	<link rel="stylesheet" href="inst.css">
+	<script type="text/javascript" src="inst.js"></script>
 </head>
 <body>
 	<div class="header">
@@ -18,7 +19,7 @@
 		</div><!--
 
 		--><div class="flex_line header_fixed__input">
-			<input type="text" name="">
+			<input type="text" name="" placeholder="Найти"><img class="input_image" src="images/x.png">
 		</div><!--
 
 		--><div class="flex_line header_fixed__icons">
