ну.. сделал кривую строку поиска, нерабочий крестик и хэдер, блочащий всю страницу

--- a/inst.html
+++ b/inst.html
@@ -7,6 +7,7 @@
 		National Geographic Travel (@natgeotravel) &#8226 Instagram photos and videos
 	</title>
 	<link rel="stylesheet" href="inst.css">
+	<script type="text/javascript" src="../jquery-3.3.1.js"></script>
 	<script type="text/javascript" src="inst.js"></script>
 </head>
 <body>
@@ -29,5 +30,43 @@
 		</div>
 	</div>
 	</header>
+	<div class="container">
+		<p>|</p>
+		<p>|</p>
+		<p>o</p>
+		<p>o</p>
+		<p>o</p>
+		<p>o</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+		<p>o</p>
+		<p>o</p>
+		<p>o</p>
+		<p>o</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+		<p>o</p>
+		<p>o</p>
+		<p>o</p>
+		<p>o</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
+	</div>
 </body>
 </html>
