--- a/inst.html
+++ b/inst.html
@@ -14,9 +14,9 @@
 	<div class="header">
 	<div class="header_fixed">
 		<div class="flex_line header_fixed__logo">
-			<img id="logo1" src="images/inst_logo1.png"><!--
+			<img class="logo1" src="images/inst_logo1.png"><!--
 
-			--><img id="logo2" src="images/inst_logo2.png">
+			--><img class="logo2" src="images/inst_logo2.png">
 		</div><!--
 
 		--><div class="flex_line header_fixed__input">
@@ -29,7 +29,7 @@
 			<img src="images/man.png">
 		</div>
 	</div>
-	</header>
+	</div>
 	<div class="container">
 		<p>|</p>
 		<p>|</p>
@@ -58,11 +58,19 @@
 		<p>o</p>
 		<p>|</p>
 		<p>|</p>
+		<p>o</p>
+		<p>o</p>
+		<p>o</p>
+		<p>o</p>
 		<p>|</p>
 		<p>|</p>
 		<p>|</p>
 		<p>|</p>
 		<p>|</p>
+		<p>o</p>
+		<p>o</p>
+		<p>o</p>
+		<p>o</p>
 		<p>|</p>
 		<p>|</p>
 		<p>|</p>
