--- a/inst.html
+++ b/inst.html
@@ -58,14 +58,6 @@
 		<p>o</p>
 		<p>|</p>
 		<p>|</p>
-		<p>o</p>
-		<p>o</p>
-		<p>o</p>
-		<p>o</p>
-		<p>|</p>
-		<p>|</p>
-		<p>|</p>
-		<p>|</p>
 		<p>|</p>
 		<p>o</p>
 		<p>o</p>
@@ -74,7 +66,22 @@
 		<p>|</p>
 		<p>|</p>
 		<p>|</p>
-		<p>|</p>
+	</div>
+	<div class="footer">
+		<div class="links">
+			<a class="common_link" target="_blank" href="https://www.instagram.com/about/us/">ABOUT AS</a>
+			<a class="common_link" target="_blank" href="https://help.instagram.com">SUPPORT</a>
+			<a class="common_link" target="_blank" href="https://instagram-press.com">PRESS</a>
+			<a class="common_link" target="_blank" href="https://www.instagram.com/developer/">API</a>
+			<a class="common_link" target="_blank" href="https://www.instagram.com/about/jobs/">JOBS</a>
+			<a class="common_link" target="_blank" href="https://www.instagram.com/legal/privacy/">PRIVACY</a>
+			<a class="common_link" target="_blank" href="https://www.instagram.com/legal/terms/">TERMS</a>
+			<a class="common_link" target="_blank" href="https://www.instagram.com/explore/locations/">DIRECTOTY</a>
+			<a class="common_link" target="_blank" href="https://www.instagram.com/directory/suggested/natgeotravel">SUGGESTED PROFILES</a>
+			<a class="common_link" target="_blank" href="https://www.instagram.com/directory/hashtags/">HASHTAGS</a>
+			<a class="common_link" target="_blank">LANGUAGE</a>
+		</div>
+		<p class="footer__string">&copy;2018 INSTAGRAM</p>
 	</div>
 </body>
 </html>
