начата работа над верхней частью, но что-то всё как-то очень сложно

--- a/inst.html
+++ b/inst.html
@@ -13,17 +13,17 @@
 <body>
 	<div class="header">
 	<div class="header_fixed">
-		<div class="flex_line header_fixed__logo">
+		<div class="header_fixed__logo flex_line">
 			<img class="logo1" src="images/inst_logo1.png"><!--
 
 			--><img class="logo2" src="images/inst_logo2.png">
 		</div><!--
 
-		--><div class="flex_line header_fixed__input">
+		--><div class="header_fixed__input flex_line">
 			<input type="text" name="" placeholder="Найти"><img class="input_image" src="images/x.png">
 		</div><!--
 
-		--><div class="flex_line header_fixed__icons">
+		--><div class="header_fixed__icons flex_line">
 			<img src="images/compas.jpg">
 			<img src="images/heart.png">
 			<img src="images/man.png">
@@ -31,21 +31,35 @@
 	</div>
 	</div>
 	<div class="container">
-		<p>|</p>
-		<p>|</p>
-		<p>o</p>
-		<p>o</p>
-		<p>o</p>
-		<p>o</p>
-		<p>|</p>
-		<p>|</p>
-		<p>|</p>
-		<p>|</p>
-		<p>o</p>
-		<p>o</p>
-		<p>o</p>
-		<p>o</p>
-		<p>|</p>
+		<div class="container__head">
+			<img class="nat_logo" src="images/nat_logo.jpg">
+
+			<div class="container__info">
+				<div class="info_top">
+					<h1 class="inline">natgeotravel</h1>
+					<img src="images/star.jpg">
+					<button>Follow</button>
+					<button>*</button>
+					<button>...</button>
+				</div>
+				<div class="info_links">
+					<p class="inline">9,187 posts</p>
+					<p class="inline followers">25.7m followers</p>
+					<p class="inline following">73 following</p>
+				</div>
+				<div class="info_description">
+					<p>National Geographic Travel</p>
+					<p>It's a big world. Explore it through the lens of our photographers.</p>
+					<a class="common_link" href="https://www.nationalgeographic.com">natgeo.com/travel</a>
+				</div>
+			</div>
+		</div>
+
+
+
+
+
+
 		<p>|</p>
 		<p>|</p>
 		<p>|</p>
