пытаемся додлеать верхушку. пока криво, попробую добавить флексов, должно отчасти сработать

--- a/inst.html
+++ b/inst.html
@@ -36,16 +36,16 @@
 
 			<div class="container__info">
 				<div class="info_top">
-					<h1 class="inline">natgeotravel</h1>
+					<h1 class="inline normal_weight">natgeotravel</h1>
 					<img src="images/star.jpg">
 					<button>Follow</button>
 					<button>*</button>
 					<button>...</button>
 				</div>
 				<div class="info_links">
-					<p class="inline">9,187 posts</p>
-					<p class="inline followers">25.7m followers</p>
-					<p class="inline following">73 following</p>
+					<p class="inline"><em class="bold_weight">9,187</em> posts</p>
+					<p class="inline"><em class="bold_weight">25.7m</em> followers</p>
+					<p class="inline"><em class="bold_weight">73</em> following</p>
 				</div>
 				<div class="info_description">
 					<p>National Geographic Travel</p>
