добавляю истории. вернее, их внешний вид. Хмм, а что если все границы давать не каждому элементу, а сделать для боди? попробую переделать!

--- a/inst.html
+++ b/inst.html
@@ -32,7 +32,9 @@
 	</div>
 	<div class="container">
 		<div class="container__head">
-			<img class="nat_logo" src="images/nat_logo.jpg">
+			<div class="nat_logo_flex">
+				<img class="nat_logo_image circle_image" src="images/nat_logo.jpg">
+			</div>
 
 			<div class="container__info">
 				<div class="info_top">
@@ -55,6 +57,28 @@
 			</div>
 		</div>
 
+		<div class="histories">
+			<div>
+				<img class="circle_image history1" src="images/paris.jpg">
+				<p class="history_text1">Paris is C...</p>
+			</div>
+			<div>
+				<img class="circle_image history1" src="images/korea.jpg">
+				<p class="history_text1">North Korea</p>
+			</div>
+			<div>
+				<img class="circle_image history1" src="images/oaxaca.jpg">
+				<p class="history_text1">Oaxaca</p>
+			</div>
+			<div>
+				<img class="circle_image history1" src="images/chernobyl.jpg">
+				<p class="history_text1">Chernobyl</p>
+			</div>
+			<div>
+				<img class="circle_image history1" src="images/best_photo.jpg">
+				<p class="history_text1">Best Phot...</p>
+			</div>
+		</div>
 
 
 
