выровнял изображения историй и всё остальное немного подровнял

--- a/inst.html
+++ b/inst.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div class="header">
-	<div class="header_fixed">
+	<div class="header_fixed main_size">
 		<div class="header_fixed__logo flex_line">
 			<img class="logo1" src="images/inst_logo1.png"><!--
 
@@ -31,7 +31,7 @@
 	</div>
 	</div>
 	<div class="container">
-		<div class="container__head">
+		<div class="container__head  main_size">
 			<div class="nat_logo_flex">
 				<img class="nat_logo_image circle_image" src="images/nat_logo.jpg">
 			</div>
@@ -57,26 +57,26 @@
 			</div>
 		</div>
 
-		<div class="histories">
-			<div>
+		<div class="histories main_size">
+			<div class="history_block1">
 				<img class="circle_image history1" src="images/paris.jpg">
-				<p class="history_text1">Paris is C...</p>
+				<p>Paris is C...</p>
 			</div>
-			<div>
+			<div class="history_block1">
 				<img class="circle_image history1" src="images/korea.jpg">
-				<p class="history_text1">North Korea</p>
+				<p>North Korea</p>
 			</div>
-			<div>
+			<div class="history_block1">
 				<img class="circle_image history1" src="images/oaxaca.jpg">
-				<p class="history_text1">Oaxaca</p>
+				<p>Oaxaca</p>
 			</div>
-			<div>
+			<div class="history_block1">
 				<img class="circle_image history1" src="images/chernobyl.jpg">
-				<p class="history_text1">Chernobyl</p>
+				<p>Chernobyl</p>
 			</div>
-			<div>
+			<div class="history_block1">
 				<img class="circle_image history1" src="images/best_photo.jpg">
-				<p class="history_text1">Best Phot...</p>
+				<p>Best Phot...</p>
 			</div>
 		</div>
 
@@ -105,7 +105,7 @@
 		<p>|</p>
 		<p>|</p>
 	</div>
-	<div class="footer">
+	<div class="footer main_size">
 		<div class="links">
 			<a class="common_link" target="_blank" href="https://www.instagram.com/about/us/">ABOUT AS</a>
 			<a class="common_link" target="_blank" href="https://help.instagram.com">SUPPORT</a>
