почти выровнял. кроме описания в заголовке, никак не поддаются теги <p>

--- a/inst.html
+++ b/inst.html
@@ -13,25 +13,28 @@
 <body>
 	<div class="header">
 	<div class="header_fixed main_size">
+
 		<div class="header_fixed__logo flex_line">
-			<img class="logo1" src="images/inst_logo1.png"><!--
+			<img class="logo1" src="images/inst_logo1.png">
 
-			--><img class="logo2" src="images/inst_logo2.png">
-		</div><!--
+			<img class="logo2" src="images/inst_logo2.png">
+		</div>
 
-		--><div class="header_fixed__input flex_line">
+		<div class="header_fixed__input flex_line">
 			<input type="text" name="" placeholder="Найти"><img class="input_image" src="images/x.png">
-		</div><!--
+		</div>
 
-		--><div class="header_fixed__icons flex_line">
+		<div class="header_fixed__icons flex_line">
 			<img src="images/compas.jpg">
 			<img src="images/heart.png">
 			<img src="images/man.png">
 		</div>
+
 	</div>
 	</div>
 	<div class="container">
 		<div class="container__head  main_size">
+
 			<div class="nat_logo_flex">
 				<img class="nat_logo_image circle_image" src="images/nat_logo.jpg">
 			</div>
@@ -40,63 +43,66 @@
 				<div class="info_top">
 					<h1 class="inline normal_weight">natgeotravel</h1>
 					<img src="images/star.jpg">
-					<button>Follow</button>
-					<button>*</button>
-					<button>...</button>
+					<button class="follow">Follow</button>
+					<button class="triangle">&#9660;</button>
+					<button class="points">...</button>
 				</div>
+
 				<div class="info_links">
 					<p class="inline"><em class="bold_weight">9,187</em> posts</p>
 					<p class="inline"><em class="bold_weight">25.7m</em> followers</p>
 					<p class="inline"><em class="bold_weight">73</em> following</p>
 				</div>
+
 				<div class="info_description">
-					<p>National Geographic Travel</p>
+					<p class="bold_weight">National Geographic Travel</p>
 					<p>It's a big world. Explore it through the lens of our photographers.</p>
 					<a class="common_link" href="https://www.nationalgeographic.com">natgeo.com/travel</a>
 				</div>
+
 			</div>
 		</div>
 
 		<div class="histories main_size">
+
 			<div class="history_block1">
 				<img class="circle_image history1" src="images/paris.jpg">
 				<p>Paris is C...</p>
 			</div>
+
 			<div class="history_block1">
 				<img class="circle_image history1" src="images/korea.jpg">
 				<p>North Korea</p>
 			</div>
+
 			<div class="history_block1">
 				<img class="circle_image history1" src="images/oaxaca.jpg">
 				<p>Oaxaca</p>
 			</div>
+
 			<div class="history_block1">
 				<img class="circle_image history1" src="images/chernobyl.jpg">
 				<p>Chernobyl</p>
 			</div>
+
 			<div class="history_block1">
 				<img class="circle_image history1" src="images/best_photo.jpg">
 				<p>Best Phot...</p>
 			</div>
+
 		</div>
 
 
 
 
+		<p>o</p>
+		<p>o</p>
+		<p>o</p>
+		<p>o</p>
+		<p>|</p>
+		<p>|</p>
+		<p>|</p>
 
-		<p>|</p>
-		<p>|</p>
-		<p>|</p>
-		<p>|</p>
-		<p>|</p>
-		<p>|</p>
-		<p>o</p>
-		<p>o</p>
-		<p>o</p>
-		<p>o</p>
-		<p>|</p>
-		<p>|</p>
-		<p>|</p>
 		<p>o</p>
 		<p>o</p>
 		<p>o</p>
@@ -106,6 +112,7 @@
 		<p>|</p>
 	</div>
 	<div class="footer main_size">
+
 		<div class="links">
 			<a class="common_link" target="_blank" href="https://www.instagram.com/about/us/">ABOUT AS</a>
 			<a class="common_link" target="_blank" href="https://help.instagram.com">SUPPORT</a>
@@ -119,6 +126,7 @@
 			<a class="common_link" target="_blank" href="https://www.instagram.com/directory/hashtags/">HASHTAGS</a>
 			<a class="common_link" target="_blank">LANGUAGE</a>
 		</div>
+
 		<p class="footer__string">&copy;2018 INSTAGRAM</p>
 	</div>
 </body>
