ура, всё ровно, но работа только началась!

--- a/inst.html
+++ b/inst.html
@@ -55,8 +55,8 @@
 				</div>
 
 				<div class="info_description">
-					<p class="bold_weight">National Geographic Travel</p>
-					<p>It's a big world. Explore it through the lens of our photographers.</p>
+					<span class="bold_weight">National Geographic Travel</span>
+					<span>It's a big world. Explore it through the lens of our photographers.</span>
 					<a class="common_link" href="https://www.nationalgeographic.com">natgeo.com/travel</a>
 				</div>
 
