--- a/inst.html
+++ b/inst.html
@@ -6,7 +6,7 @@
 	<title>
 		National Geographic Travel (@natgeotravel) &#8226 Instagram photos and videos
 	</title>
-	<link rel="stylesheet" href="inst.css">
+	<link class="main_style" rel="stylesheet" href="inst.css">
 	<script type="text/javascript" src="../jquery-3.3.1.js"></script>
 	<script type="text/javascript" src="inst.js"></script>
 </head>
@@ -43,8 +43,10 @@
 				<div class="info_top">
 					<h1 class="inline normal_weight">natgeotravel</h1>
 					<img src="images/star.jpg">
-					<button class="follow">Follow</button>
-					<button class="triangle">&#9660;</button>
+					<span class="buttons">
+						<button class="follow">Follow</button>
+						<button class="triangle">&#9660;</button>
+					</span>
 					<button class="points">...</button>
 				</div>
 
@@ -62,55 +64,84 @@
 
 			</div>
 		</div>
+				<div class="info_description_small">
+					<span class="bold_weight">National Geographic Travel</span>
+					<span>It's a big world. Explore it through the lens of our photographers.</span>
+					<a class="common_link" href="https://www.nationalgeographic.com">natgeo.com/travel</a>
+				</div>
 
 		<div class="histories main_size">
 
-			<div class="history_block1">
-				<img class="circle_image history1" src="images/paris.jpg">
+			<div class="history_block">
+				<img class="circle_image history" src="images/paris.jpg">
 				<p>Paris is C...</p>
 			</div>
 
-			<div class="history_block1">
-				<img class="circle_image history1" src="images/korea.jpg">
+			<div class="history_block">
+				<img class="circle_image history" src="images/korea.jpg">
 				<p>North Korea</p>
 			</div>
 
-			<div class="history_block1">
-				<img class="circle_image history1" src="images/oaxaca.jpg">
+			<div class="history_block">
+				<img class="circle_image history" src="images/oaxaca.jpg">
 				<p>Oaxaca</p>
 			</div>
 
-			<div class="history_block1">
-				<img class="circle_image history1" src="images/chernobyl.jpg">
+			<div class="history_block">
+				<img class="circle_image history" src="images/chernobyl.jpg">
 				<p>Chernobyl</p>
 			</div>
 
-			<div class="history_block1">
-				<img class="circle_image history1" src="images/best_photo.jpg">
+			<div class="history_block">
+				<img class="circle_image history" src="images/best_photo.jpg">
 				<p>Best Phot...</p>
 			</div>
 
 		</div>
 
+		<div class="info_links_small">
+			<p class="inline"><em class="bold_weight">9,187</em><br> posts</p>
+			<p class="inline"><em class="bold_weight">25.7m</em><br> followers</p>
+			<p class="inline"><em class="bold_weight">73</em><br> following</p>
+		</div>
 
+		<div class="delitel_body">
+			<div class="delitel">
+				<div class="delitel_contain">
+					<img class="delitel_image" src="images/posts.png">
+					<span class="delitel_text">POSTS</span>
+				</div>
+				<div class="delitel_contain">
+					<img class="delitel_image" src="images/tagged.png">
+					<span class="delitel_text">TAGGED</span>
+				</div>
+			</div>
+		</div>
+	
+	<div class="photos">
 
+		<div class="trio">
+			<img class="trio_photo" src="images_container_sq/container1.jpg">
+			<img class="trio_photo" src="images_container_sq/container2.jpg">
+			<img class="trio_photo" src="images_container_sq/container3.jpg">
+		</div>
+		
+		<div class="trio">
+			<img class="trio_photo" src="images_container_sq/container4.jpg">
+			<img class="trio_photo" src="images_container_sq/container5.jpg">
+			<img class="trio_photo" src="images_container_sq/container6.jpg">
+		</div>
 
-		<p>o</p>
-		<p>o</p>
-		<p>o</p>
-		<p>o</p>
-		<p>|</p>
-		<p>|</p>
-		<p>|</p>
+		<div class="trio">
+			<img class="trio_photo" src="images_container_sq/container7.jpg">
+			<img class="trio_photo" src="images_container_sq/container8.jpg">
+			<img class="trio_photo" src="images_container_sq/container9.jpg">
+		</div>
 
-		<p>o</p>
-		<p>o</p>
-		<p>o</p>
-		<p>o</p>
-		<p>|</p>
-		<p>|</p>
-		<p>|</p>
 	</div>
+
+	</div>
+	
 	<div class="footer main_size">
 
 		<div class="links">
