сколько времени не трать - это будет конченый кусок дерьма, работающий всё хуже

--- a/inst.html
+++ b/inst.html
@@ -23,11 +23,11 @@
 		<div class="header_fixed__input flex_line">
 			<input type="text" name="" placeholder="Найти"><img class="input_image" src="images/x.png">
 		</div>
-
+		<p id="coords"> Coords:</p>
 		<div class="header_fixed__icons flex_line">
-			<img src="images/compas.jpg">
-			<img src="images/heart.png">
-			<img src="images/man.png">
+			<img class="compas" src="images/compas.jpg">
+			<img class="heart" src="images/heart.png">
+			<img class="man" src="images/man.png">
 		</div>
 
 	</div>
